objects/Qualification__c.object
<CustomObject>
    <fields>
        <fullName>AS_Booking_Split_A_TCCV__c</fullName>
        <description>CMS Contract Value ($000)</description>
        <label>AS Booking Split (A-TCCV) ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AS_Booking_Split_TCCV_000__c</fullName>
        <description>AS Booking Split (TCCV)</description>
        <label>AS Booking Split (TCCV) ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AS_Booking_Split__c</fullName>
        <inlineHelpText>Percentage of Total Service Revenue</inlineHelpText>
        <label>AS Booking Split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AS_Lead__c</fullName>
        <description>AS Lead</description>
        <label>AS Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Attorney__c</fullName>
        <description>Account Attorney</description>
        <label>Account Attorney</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account Type</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Key</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Email_Comments__c</fullName>
        <inlineHelpText>For Reviewer to provide Comments, Action Items or Next Steps instruction</inlineHelpText>
        <label>Additional Email Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adoption_Services__c</fullName>
        <description>Adoption Services</description>
        <label>Adoption Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <description>CMS BDM Allocation Percentage</description>
        <label>CMS BDM Allocation %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_TCCV_A_TCCV__c</fullName>
        <formula>Total_Committed_Contract_Value_TCCV_000__c / VALUE(Contract_Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual TCCV (A-TCCV) ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Architechture_Email_Borderless__c</fullName>
        <description>Email field for architechture .</description>
        <label>Architechture Email Borderless Networks</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Architechture_Email_Collaboration__c</fullName>
        <description>Email field NBM Architechture Collaboration</description>
        <label>Architechture Email Collaboration</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Architechture_Email_Data_Center__c</fullName>
        <label>Architechture Email Data Center</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Architechture_Email_Service_Provider__c</fullName>
        <label>Architechture Email Service Provider</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Architechture_Email_Smart__c</fullName>
        <label>Architechture Email  Smart &amp; Connected</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Architecture_Notes_Next_Steps__c</fullName>
        <label>Architecture Notes &amp; Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Architecture_Tower_Lead__c</fullName>
        <description>Architecture Tower Lead</description>
        <label>Architecture Tower Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <inlineHelpText>What is the technical description ?</inlineHelpText>
        <label>Architecture</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Ownership__c</fullName>
        <description>Standardization</description>
        <label>Standardization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom (20% to 80% Custom)</fullName>
                </value>
                <value>
                    <fullName>Bespoke (&gt;80% Custom)</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
                <value>
                    <fullName>Custom off Standard</fullName>
                </value>
                <value>
                    <fullName>Bespoke Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Operations__c</fullName>
        <description>Business Operation Tower Lead</description>
        <label>Business Operations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_sell_Entitiy__c</fullName>
        <description>Pursuit Type-Offer</description>
        <label>Pursuit Type-Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Capital ITSP</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>MS-Cloud</fullName>
                </value>
                <value>
                    <fullName>MS-Collab</fullName>
                </value>
                <value>
                    <fullName>MS-DC</fullName>
                </value>
                <value>
                    <fullName>MS-Ent NW</fullName>
                </value>
                <value>
                    <fullName>MS-Security</fullName>
                </value>
                <value>
                    <fullName>MS-SP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SETConnect: SDWAN</fullName>
                </value>
                <value>
                    <fullName>SETConnect: Video</fullName>
                </value>
                <value>
                    <fullName>SETConnect: Voice</fullName>
                </value>
                <value>
                    <fullName>Third Party Funds (GIF)</fullName>
                </value>
                <value>
                    <fullName>XaaS-Cloud</fullName>
                </value>
                <value>
                    <fullName>XaaS-Collab</fullName>
                </value>
                <value>
                    <fullName>XaaS-DC</fullName>
                </value>
                <value>
                    <fullName>XaaS-Ent NW</fullName>
                </value>
                <value>
                    <fullName>XaaS-Security</fullName>
                </value>
                <value>
                    <fullName>XaaS-SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMS_A_TCCV_000__c</fullName>
        <formula>IF(VALUE(Contract_Duration__c) &gt;= 12, (CMS_Booking_Split_TCCV_000__c / VALUE(Contract_Duration__c))*12, CMS_Booking_Split_TCCV_000__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS A-TCCV ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMS_Activation_Lead__c</fullName>
        <description>CMS Activation Lead</description>
        <label>CMS Activation Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Booking_Split_A_TCCV__c</fullName>
        <description>Expected Year 1 CMSO Booking ($000)</description>
        <label>CMS Single Booking Value ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMS_Booking_Split_TCCV_000__c</fullName>
        <description>CMS Booking Split (TCCV)</description>
        <label>CMS TCCV ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMS_Booking_Split__c</fullName>
        <description>Cloud and Managed Service contribution</description>
        <inlineHelpText>Cloud and Managed Service contribution</inlineHelpText>
        <label>CMS Booking Split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMS_Deal_Insights__c</fullName>
        <description>old name Cisco Executive Sponsor</description>
        <label>CMS Weekly Deal Notes</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMS_Pursuit_Type__c</fullName>
        <description>Uses for  CMS</description>
        <label>CMS Pursuit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Expand</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>A-TCCV</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMS_Regional_SDM_Manager__c</fullName>
        <label>CMS Regional SDM Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Secondary_BDM_Allocated_Percentage__c</fullName>
        <description>CMS Secondary BDM Allocated %</description>
        <label>CMS Secondary BDM Allocated %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMS_Secondary_BDM__c</fullName>
        <description>CMS Secondary BDM</description>
        <label>CMS Secondary BDM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMDB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRMDB</label>
        <referenceTo>CRMDB__c</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CX_A_TCCV_000__c</fullName>
        <formula>IF(VALUE(Contract_Duration__c) &gt;= 12, (Total_Service_Size__c/VALUE(Contract_Duration__c))*12, Total_Service_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX A-TCCV ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capability_1__c</fullName>
        <label>Capability[1] %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Capability_2__c</fullName>
        <label>Capability[2] %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Capability_3__c</fullName>
        <label>Capability[3] %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Capital_Contact__c</fullName>
        <description>Capital Contact</description>
        <label>Capital Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <description>Field to Store Channel Partner</description>
        <label>Channel Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Bookings__c</fullName>
        <label>Cisco Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cisco_Capital_involvement__c</fullName>
        <label>Cisco Capital Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_Client_Relationship__c</fullName>
        <label>Cisco Client Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Differentiation_Execution_Needs__c</fullName>
        <label>Cisco Differentiation Execution Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Sales_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSPO Cisco Sales BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cisco_Services_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSPO Cisco Services BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cisco_Skin_In_The_Game__c</fullName>
        <label>Cisco Skin In The Game</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_Tech_PSS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSPO Cisco Tech/PSS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claims_Status__c</fullName>
        <description>This filed stores Status of Claim Submitted</description>
        <label>Claims Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Claimed</fullName>
                    <default>true</default>
                    <label>Not Claimed</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validation in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>GSPO Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Finance_Email__c</fullName>
        <defaultValue>"nbm-review_cf-global@cisco.com"</defaultValue>
        <label>Commercial Finance Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Commercial_Finance__c</fullName>
        <label>Commercial Finance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Model__c</fullName>
        <inlineHelpText>For more information please refer to Commercial Model Guide: 

http://tools.cisco.com/squish/Ca4B3</inlineHelpText>
        <label>Commercial Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business as Usual</fullName>
                </value>
                <value>
                    <fullName>Managed Service-Multi Year Billing</fullName>
                </value>
                <value>
                    <fullName>Managed Service-Resource Unit Billing</fullName>
                </value>
                <value>
                    <fullName>Utility Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Office_Engagement_Type__c</fullName>
        <label>Commercial Office Engagement Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Office__c</fullName>
        <label>Commercial Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Tower_Lead__c</fullName>
        <description>Commercial Tower Lead</description>
        <label>Commercial Tower Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Field stores the value of competitors</description>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connected_Architecture__c</fullName>
        <label>GSPO Connected Architecture</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Customer  Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Duration__c</fullName>
        <description>Contract Duration (Months)</description>
        <label>Contract Duration (Months)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Contract End Date</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Initiation__c</fullName>
        <label>Contact Initiation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Contract Start Date</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Value_Product__c</fullName>
        <description>Total Contract Value Product (TCV) ($000)</description>
        <label>Total Contract Value Product (TCV) ($000</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <label>Total Contract Value (TCV) ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year_1_Margin_000__c</fullName>
        <label>Year 1 Margin ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year_1_Revenue__c</fullName>
        <label>Contract Year 1 Revenue ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year_2_Product_Size_000__c</fullName>
        <label>Contract Year 2 Product Size ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year_2_Service_Size_000__c</fullName>
        <label>Contract Year 2 Service Size ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year_3_Product_Size_000__c</fullName>
        <label>Contract Year 3 Product Size ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year_3_Service_Size_000__c</fullName>
        <label>Contract Year 3 Service Size ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year_4_Product_Size_000__c</fullName>
        <label>Contract Year 4 Product Size ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year_4_Service_Size_000__c</fullName>
        <label>Contract Year 4 Service Size ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractural_Relationship__c</fullName>
        <inlineHelpText>Existing relationship that Cisco has with the customer</inlineHelpText>
        <label>Contractual Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Direct</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>New Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries_Covered__c</fullName>
        <inlineHelpText>Please enter the countries in a comma separated list.</inlineHelpText>
        <label>Countries Covered</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This Field contains the list of country names/values</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Cisco_Lending__c</fullName>
        <label>Current Cisco Lending</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sentiment__c</fullName>
        <label>Customer Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>At-Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Vision__c</fullName>
        <inlineHelpText>Please detail the customer requirements</inlineHelpText>
        <label>Customer Business Requirement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>GSPO Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQA_1_Comments__c</fullName>
        <label>DQA 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DQA_1_Requested_Review_Date__c</fullName>
        <description>DQA_1_Requested_Review_Date</description>
        <label>DQA 1 Requested Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DQA_1_Review_Result__c</fullName>
        <description>DQA Review 1 Result</description>
        <label>DQA 1 Review Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assured</fullName>
                </value>
                <value>
                    <fullName>Assured Conditional</fullName>
                </value>
                <value>
                    <fullName>Not Assured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DQA_2Requested_Review_Date__c</fullName>
        <description>DQA Review 2 Date</description>
        <label>DQA 2 Requested Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DQA_2_Comments__c</fullName>
        <label>DQA 2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DQA_2_Review_Result__c</fullName>
        <description>DQA Review 2 Result</description>
        <label>DQA 2 Review Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assured</fullName>
                </value>
                <value>
                    <fullName>Assured Conditional</fullName>
                </value>
                <value>
                    <fullName>Not Assured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Anchor_Contribution_in_K__c</fullName>
        <description>Deal Anchor Contribution in K</description>
        <label>Deal Anchor Contribution in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Anchor__c</fullName>
        <description>Deal Anchor</description>
        <label>Deal Anchor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Review_Notes__c</fullName>
        <label>Weekly Deal Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_sellingType__c</fullName>
        <label>Deal SellingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_End_Quarter__c</fullName>
        <description>Delivery End Quarter</description>
        <label>Current Delivery End Quarter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Partner__c</fullName>
        <label>Delivery Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>Field stores the value of Distributors</description>
        <label>Distributor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engaged_Team_s__c</fullName>
        <description>Type of Opportunity</description>
        <label>Engaged Team(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APJ SET</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>EMEAR LCD</fullName>
                </value>
                <value>
                    <fullName>GES SET</fullName>
                </value>
                <value>
                    <fullName>GES SETConnect</fullName>
                </value>
                <value>
                    <fullName>GSP LCD</fullName>
                </value>
                <value>
                    <fullName>ITaaB</fullName>
                </value>
                <value>
                    <fullName>ITaaB Expand</fullName>
                </value>
                <value>
                    <fullName>UKI SET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_Tower_Lead__c</fullName>
        <description>Engagement Tower Lead</description>
        <label>Engagement Tower Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Cisco_SLAs__c</fullName>
        <label>Expected Cisco SLAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>